// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<LineChartCard /> > renders chart with expected data 1`] = `
<div>
  <div
    class="card"
  >
    <div
      aria-level="4"
      class="card-header"
      role="heading"
    >
      Cool title
      <div
        class="float-end"
      >
        <div
          class="dropdown"
        >
          <button
            aria-expanded="false"
            aria-haspopup="true"
            class="btn-sm p-0 dropdown-toggle btn btn-link"
            type="button"
          >
            Group by
          </button>
          <div
            aria-hidden="true"
            class="dropdown-menu dropdown-menu-end"
            role="menu"
            tabindex="-1"
          >
            <button
              class="dropdown-item active"
              role="menuitem"
              tabindex="0"
              type="button"
            >
              Month
            </button>
            <button
              class="dropdown-item"
              role="menuitem"
              tabindex="0"
              type="button"
            >
              Week
            </button>
            <button
              class="dropdown-item"
              role="menuitem"
              tabindex="0"
              type="button"
            >
              Day
            </button>
            <button
              class="dropdown-item"
              role="menuitem"
              tabindex="0"
              type="button"
            >
              Hour
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="card-body"
    >
      <div
        class="recharts-wrapper"
        role="region"
        style="position: relative; cursor: default; width: 800px; height: 400px;"
      >
        <svg
          class="recharts-surface"
          height="400"
          style="width: 100%; height: 100%;"
          viewBox="0 0 800 400"
          width="800"
        >
          <title />
          <desc />
          <defs>
            <clippath
              id="recharts28-clip"
            >
              <rect
                height="360"
                width="730"
                x="65"
                y="5"
              />
            </clippath>
          </defs>
          <g
            class="recharts-cartesian-grid"
          >
            <g
              class="recharts-cartesian-grid-horizontal"
            >
              <line
                fill="none"
                height="360"
                stroke="#ccc"
                stroke-opacity="0.9"
                width="730"
                x="65"
                x1="65"
                x2="795"
                y="5"
                y1="5"
                y2="5"
              />
              <line
                fill="none"
                height="360"
                stroke="#ccc"
                stroke-opacity="0.9"
                width="730"
                x="65"
                x1="65"
                x2="795"
                y="5"
                y1="365"
                y2="365"
              />
            </g>
            <g
              class="recharts-cartesian-grid-vertical"
            >
              <line
                fill="none"
                height="360"
                stroke="#ccc"
                stroke-opacity="0.9"
                width="730"
                x="65"
                x1="65"
                x2="65"
                y="5"
                y1="5"
                y2="365"
              />
              <line
                fill="none"
                height="360"
                stroke="#ccc"
                stroke-opacity="0.9"
                width="730"
                x="65"
                x1="795"
                x2="795"
                y="5"
                y1="5"
                y2="365"
              />
            </g>
          </g>
        </svg>
        <div
          class="recharts-tooltip-wrapper"
          role="dialog"
          style="visibility: hidden; pointer-events: none; position: absolute; top: 0px; left: 0px;"
          tabindex="-1"
        >
          <div
            class="recharts-default-tooltip"
            style="margin: 0px; padding: 10px; background-color: rgb(255, 255, 255); white-space: nowrap; color: white; border-radius: 5px;"
          >
            <p
              class="recharts-tooltip-label"
              style="margin: 0px;"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<LineChartCard /> > renders chart with expected data 2`] = `
<div>
  <div
    class="card"
  >
    <div
      aria-level="4"
      class="card-header"
      role="heading"
    >
      Cool title
      <div
        class="float-end"
      >
        <div
          class="dropdown"
        >
          <button
            aria-expanded="false"
            aria-haspopup="true"
            class="btn-sm p-0 dropdown-toggle btn btn-link"
            type="button"
          >
            Group by
          </button>
          <div
            aria-hidden="true"
            class="dropdown-menu dropdown-menu-end"
            role="menu"
            tabindex="-1"
          >
            <button
              class="dropdown-item active"
              role="menuitem"
              tabindex="0"
              type="button"
            >
              Month
            </button>
            <button
              class="dropdown-item"
              role="menuitem"
              tabindex="0"
              type="button"
            >
              Week
            </button>
            <button
              class="dropdown-item"
              role="menuitem"
              tabindex="0"
              type="button"
            >
              Day
            </button>
            <button
              class="dropdown-item"
              role="menuitem"
              tabindex="0"
              type="button"
            >
              Hour
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="card-body"
    >
      <div
        class="recharts-wrapper"
        role="region"
        style="position: relative; cursor: default; width: 800px; height: 400px;"
      >
        <svg
          class="recharts-surface"
          height="400"
          style="width: 100%; height: 100%;"
          viewBox="0 0 800 400"
          width="800"
        >
          <title />
          <desc />
          <defs>
            <clippath
              id="recharts31-clip"
            >
              <rect
                height="360"
                width="730"
                x="65"
                y="5"
              />
            </clippath>
          </defs>
          <g
            class="recharts-cartesian-grid"
          >
            <g
              class="recharts-cartesian-grid-horizontal"
            >
              <line
                fill="none"
                height="360"
                stroke="#ccc"
                stroke-opacity="0.9"
                width="730"
                x="65"
                x1="65"
                x2="795"
                y="5"
                y1="5"
                y2="5"
              />
              <line
                fill="none"
                height="360"
                stroke="#ccc"
                stroke-opacity="0.9"
                width="730"
                x="65"
                x1="65"
                x2="795"
                y="5"
                y1="365"
                y2="365"
              />
            </g>
            <g
              class="recharts-cartesian-grid-vertical"
            >
              <line
                fill="none"
                height="360"
                stroke="#ccc"
                stroke-opacity="0.9"
                width="730"
                x="65"
                x1="65"
                x2="65"
                y="5"
                y1="5"
                y2="365"
              />
              <line
                fill="none"
                height="360"
                stroke="#ccc"
                stroke-opacity="0.9"
                width="730"
                x="65"
                x1="795"
                x2="795"
                y="5"
                y1="5"
                y2="365"
              />
            </g>
          </g>
        </svg>
        <div
          class="recharts-tooltip-wrapper"
          role="dialog"
          style="visibility: hidden; pointer-events: none; position: absolute; top: 0px; left: 0px;"
          tabindex="-1"
        >
          <div
            class="recharts-default-tooltip"
            style="margin: 0px; padding: 10px; background-color: rgb(255, 255, 255); white-space: nowrap; color: white; border-radius: 5px;"
          >
            <p
              class="recharts-tooltip-label"
              style="margin: 0px;"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<LineChartCard /> > renders chart with expected data 3`] = `
<div>
  <div
    class="card"
  >
    <div
      aria-level="4"
      class="card-header"
      role="heading"
    >
      Cool title
      <div
        class="float-end"
      >
        <div
          class="dropdown"
        >
          <button
            aria-expanded="false"
            aria-haspopup="true"
            class="btn-sm p-0 dropdown-toggle btn btn-link"
            type="button"
          >
            Group by
          </button>
          <div
            aria-hidden="true"
            class="dropdown-menu dropdown-menu-end"
            role="menu"
            tabindex="-1"
          >
            <button
              class="dropdown-item active"
              role="menuitem"
              tabindex="0"
              type="button"
            >
              Month
            </button>
            <button
              class="dropdown-item"
              role="menuitem"
              tabindex="0"
              type="button"
            >
              Week
            </button>
            <button
              class="dropdown-item"
              role="menuitem"
              tabindex="0"
              type="button"
            >
              Day
            </button>
            <button
              class="dropdown-item"
              role="menuitem"
              tabindex="0"
              type="button"
            >
              Hour
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="card-body"
    >
      <div
        class="recharts-wrapper"
        role="region"
        style="position: relative; cursor: default; width: 800px; height: 400px;"
      >
        <svg
          class="recharts-surface"
          height="400"
          style="width: 100%; height: 100%;"
          viewBox="0 0 800 400"
          width="800"
        >
          <title />
          <desc />
          <defs>
            <clippath
              id="recharts34-clip"
            >
              <rect
                height="360"
                width="730"
                x="65"
                y="5"
              />
            </clippath>
          </defs>
          <g
            class="recharts-layer recharts-cartesian-axis recharts-xAxis xAxis"
          >
            <line
              class="recharts-cartesian-axis-line"
              fill="none"
              height="30"
              orientation="bottom"
              stroke="#666"
              width="730"
              x="65"
              x1="65"
              x2="795"
              y="365"
              y1="365"
              y2="365"
            />
            <g
              class="recharts-cartesian-axis-ticks"
            >
              <g
                class="recharts-layer recharts-cartesian-axis-tick"
              >
                <line
                  class="recharts-cartesian-axis-tick-line"
                  fill="none"
                  height="30"
                  orientation="bottom"
                  stroke="#666"
                  width="730"
                  x="65"
                  x1="430"
                  x2="430"
                  y="365"
                  y1="371"
                  y2="365"
                />
                <text
                  class="recharts-text recharts-cartesian-axis-tick-value"
                  fill="#666"
                  height="30"
                  orientation="bottom"
                  stroke="none"
                  text-anchor="middle"
                  width="730"
                  x="430"
                  y="373"
                >
                  <tspan
                    dy="0.71em"
                    x="430"
                  >
                    2016-04
                  </tspan>
                </text>
              </g>
            </g>
          </g>
          <g
            class="recharts-layer recharts-cartesian-axis recharts-yAxis yAxis"
          >
            <line
              class="recharts-cartesian-axis-line"
              fill="none"
              height="360"
              orientation="left"
              stroke="#666"
              width="60"
              x="5"
              x1="65"
              x2="65"
              y="5"
              y1="5"
              y2="365"
            />
            <g
              class="recharts-cartesian-axis-ticks"
            >
              <g
                class="recharts-layer recharts-cartesian-axis-tick"
              >
                <line
                  class="recharts-cartesian-axis-tick-line"
                  fill="none"
                  height="360"
                  orientation="left"
                  stroke="#666"
                  width="60"
                  x="5"
                  x1="59"
                  x2="65"
                  y="5"
                  y1="365"
                  y2="365"
                />
                <text
                  class="recharts-text recharts-cartesian-axis-tick-value"
                  fill="#666"
                  height="360"
                  orientation="left"
                  stroke="none"
                  text-anchor="end"
                  width="60"
                  x="57"
                  y="365"
                >
                  <tspan
                    dy="0.355em"
                    x="57"
                  >
                    0
                  </tspan>
                </text>
              </g>
              <g
                class="recharts-layer recharts-cartesian-axis-tick"
              >
                <line
                  class="recharts-cartesian-axis-tick-line"
                  fill="none"
                  height="360"
                  orientation="left"
                  stroke="#666"
                  width="60"
                  x="5"
                  x1="59"
                  x2="65"
                  y="5"
                  y1="275"
                  y2="275"
                />
                <text
                  class="recharts-text recharts-cartesian-axis-tick-value"
                  fill="#666"
                  height="360"
                  orientation="left"
                  stroke="none"
                  text-anchor="end"
                  width="60"
                  x="57"
                  y="275"
                >
                  <tspan
                    dy="0.355em"
                    x="57"
                  >
                    0.25
                  </tspan>
                </text>
              </g>
              <g
                class="recharts-layer recharts-cartesian-axis-tick"
              >
                <line
                  class="recharts-cartesian-axis-tick-line"
                  fill="none"
                  height="360"
                  orientation="left"
                  stroke="#666"
                  width="60"
                  x="5"
                  x1="59"
                  x2="65"
                  y="5"
                  y1="185"
                  y2="185"
                />
                <text
                  class="recharts-text recharts-cartesian-axis-tick-value"
                  fill="#666"
                  height="360"
                  orientation="left"
                  stroke="none"
                  text-anchor="end"
                  width="60"
                  x="57"
                  y="185"
                >
                  <tspan
                    dy="0.355em"
                    x="57"
                  >
                    0.5
                  </tspan>
                </text>
              </g>
              <g
                class="recharts-layer recharts-cartesian-axis-tick"
              >
                <line
                  class="recharts-cartesian-axis-tick-line"
                  fill="none"
                  height="360"
                  orientation="left"
                  stroke="#666"
                  width="60"
                  x="5"
                  x1="59"
                  x2="65"
                  y="5"
                  y1="95"
                  y2="95"
                />
                <text
                  class="recharts-text recharts-cartesian-axis-tick-value"
                  fill="#666"
                  height="360"
                  orientation="left"
                  stroke="none"
                  text-anchor="end"
                  width="60"
                  x="57"
                  y="95"
                >
                  <tspan
                    dy="0.355em"
                    x="57"
                  >
                    0.75
                  </tspan>
                </text>
              </g>
              <g
                class="recharts-layer recharts-cartesian-axis-tick"
              >
                <line
                  class="recharts-cartesian-axis-tick-line"
                  fill="none"
                  height="360"
                  orientation="left"
                  stroke="#666"
                  width="60"
                  x="5"
                  x1="59"
                  x2="65"
                  y="5"
                  y1="5"
                  y2="5"
                />
                <text
                  class="recharts-text recharts-cartesian-axis-tick-value"
                  fill="#666"
                  height="360"
                  orientation="left"
                  stroke="none"
                  text-anchor="end"
                  width="60"
                  x="57"
                  y="5"
                >
                  <tspan
                    dy="0.355em"
                    x="57"
                  >
                    1
                  </tspan>
                </text>
              </g>
            </g>
          </g>
          <g
            class="recharts-cartesian-grid"
          >
            <g
              class="recharts-cartesian-grid-horizontal"
            >
              <line
                fill="none"
                height="360"
                stroke="#ccc"
                stroke-opacity="0.9"
                width="730"
                x="65"
                x1="65"
                x2="795"
                y="5"
                y1="365"
                y2="365"
              />
              <line
                fill="none"
                height="360"
                stroke="#ccc"
                stroke-opacity="0.9"
                width="730"
                x="65"
                x1="65"
                x2="795"
                y="5"
                y1="275"
                y2="275"
              />
              <line
                fill="none"
                height="360"
                stroke="#ccc"
                stroke-opacity="0.9"
                width="730"
                x="65"
                x1="65"
                x2="795"
                y="5"
                y1="185"
                y2="185"
              />
              <line
                fill="none"
                height="360"
                stroke="#ccc"
                stroke-opacity="0.9"
                width="730"
                x="65"
                x1="65"
                x2="795"
                y="5"
                y1="95"
                y2="95"
              />
              <line
                fill="none"
                height="360"
                stroke="#ccc"
                stroke-opacity="0.9"
                width="730"
                x="65"
                x1="65"
                x2="795"
                y="5"
                y1="5"
                y2="5"
              />
            </g>
            <g
              class="recharts-cartesian-grid-vertical"
            >
              <line
                fill="none"
                height="360"
                stroke="#ccc"
                stroke-opacity="0.9"
                width="730"
                x="65"
                x1="430"
                x2="430"
                y="5"
                y1="5"
                y2="365"
              />
              <line
                fill="none"
                height="360"
                stroke="#ccc"
                stroke-opacity="0.9"
                width="730"
                x="65"
                x1="65"
                x2="65"
                y="5"
                y1="5"
                y2="365"
              />
              <line
                fill="none"
                height="360"
                stroke="#ccc"
                stroke-opacity="0.9"
                width="730"
                x="65"
                x1="795"
                x2="795"
                y="5"
                y1="5"
                y2="365"
              />
            </g>
          </g>
          <g
            class="recharts-layer recharts-line"
          >
            <g
              class="recharts-layer"
            />
            <g
              class="recharts-layer recharts-line-dots"
            >
              <circle
                class="recharts-dot recharts-line-dot"
                cx="430"
                cy="5"
                fill="#fff"
                height="360"
                r="3"
                stroke="#4696e5"
                stroke-width="3"
                width="730"
              />
            </g>
          </g>
        </svg>
        <div
          class="recharts-tooltip-wrapper"
          role="dialog"
          style="visibility: hidden; pointer-events: none; position: absolute; top: 0px; left: 0px;"
          tabindex="-1"
        >
          <div
            class="recharts-default-tooltip"
            style="margin: 0px; padding: 10px; background-color: rgb(255, 255, 255); white-space: nowrap; color: white; border-radius: 5px;"
          >
            <p
              class="recharts-tooltip-label"
              style="margin: 0px;"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<LineChartCard /> > renders chart with expected data 4`] = `
<div>
  <div
    class="card"
  >
    <div
      aria-level="4"
      class="card-header"
      role="heading"
    >
      Cool title
      <div
        class="float-end"
      >
        <div
          class="dropdown"
        >
          <button
            aria-expanded="false"
            aria-haspopup="true"
            class="btn-sm p-0 dropdown-toggle btn btn-link"
            type="button"
          >
            Group by
          </button>
          <div
            aria-hidden="true"
            class="dropdown-menu dropdown-menu-end"
            role="menu"
            tabindex="-1"
          >
            <button
              class="dropdown-item active"
              role="menuitem"
              tabindex="0"
              type="button"
            >
              Month
            </button>
            <button
              class="dropdown-item"
              role="menuitem"
              tabindex="0"
              type="button"
            >
              Week
            </button>
            <button
              class="dropdown-item"
              role="menuitem"
              tabindex="0"
              type="button"
            >
              Day
            </button>
            <button
              class="dropdown-item"
              role="menuitem"
              tabindex="0"
              type="button"
            >
              Hour
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="card-body"
    >
      <div
        class="recharts-wrapper"
        role="region"
        style="position: relative; cursor: default; width: 800px; height: 400px;"
      >
        <svg
          class="recharts-surface"
          height="400"
          style="width: 100%; height: 100%;"
          viewBox="0 0 800 400"
          width="800"
        >
          <title />
          <desc />
          <defs>
            <clippath
              id="recharts37-clip"
            >
              <rect
                height="360"
                width="730"
                x="65"
                y="5"
              />
            </clippath>
          </defs>
          <g
            class="recharts-layer recharts-cartesian-axis recharts-xAxis xAxis"
          >
            <line
              class="recharts-cartesian-axis-line"
              fill="none"
              height="30"
              orientation="bottom"
              stroke="#666"
              width="730"
              x="65"
              x1="65"
              x2="795"
              y="365"
              y1="365"
              y2="365"
            />
            <g
              class="recharts-cartesian-axis-ticks"
            >
              <g
                class="recharts-layer recharts-cartesian-axis-tick"
              >
                <line
                  class="recharts-cartesian-axis-tick-line"
                  fill="none"
                  height="30"
                  orientation="bottom"
                  stroke="#666"
                  width="730"
                  x="65"
                  x1="430"
                  x2="430"
                  y="365"
                  y1="371"
                  y2="365"
                />
                <text
                  class="recharts-text recharts-cartesian-axis-tick-value"
                  fill="#666"
                  height="30"
                  orientation="bottom"
                  stroke="none"
                  text-anchor="middle"
                  width="730"
                  x="430"
                  y="373"
                >
                  <tspan
                    dy="0.71em"
                    x="430"
                  >
                    2016-04
                  </tspan>
                </text>
              </g>
            </g>
          </g>
          <g
            class="recharts-layer recharts-cartesian-axis recharts-yAxis yAxis"
          >
            <line
              class="recharts-cartesian-axis-line"
              fill="none"
              height="360"
              orientation="left"
              stroke="#666"
              width="60"
              x="5"
              x1="65"
              x2="65"
              y="5"
              y1="5"
              y2="365"
            />
            <g
              class="recharts-cartesian-axis-ticks"
            >
              <g
                class="recharts-layer recharts-cartesian-axis-tick"
              >
                <line
                  class="recharts-cartesian-axis-tick-line"
                  fill="none"
                  height="360"
                  orientation="left"
                  stroke="#666"
                  width="60"
                  x="5"
                  x1="59"
                  x2="65"
                  y="5"
                  y1="365"
                  y2="365"
                />
                <text
                  class="recharts-text recharts-cartesian-axis-tick-value"
                  fill="#666"
                  height="360"
                  orientation="left"
                  stroke="none"
                  text-anchor="end"
                  width="60"
                  x="57"
                  y="365"
                >
                  <tspan
                    dy="0.355em"
                    x="57"
                  >
                    0
                  </tspan>
                </text>
              </g>
              <g
                class="recharts-layer recharts-cartesian-axis-tick"
              >
                <line
                  class="recharts-cartesian-axis-tick-line"
                  fill="none"
                  height="360"
                  orientation="left"
                  stroke="#666"
                  width="60"
                  x="5"
                  x1="59"
                  x2="65"
                  y="5"
                  y1="275"
                  y2="275"
                />
                <text
                  class="recharts-text recharts-cartesian-axis-tick-value"
                  fill="#666"
                  height="360"
                  orientation="left"
                  stroke="none"
                  text-anchor="end"
                  width="60"
                  x="57"
                  y="275"
                >
                  <tspan
                    dy="0.355em"
                    x="57"
                  >
                    0.25
                  </tspan>
                </text>
              </g>
              <g
                class="recharts-layer recharts-cartesian-axis-tick"
              >
                <line
                  class="recharts-cartesian-axis-tick-line"
                  fill="none"
                  height="360"
                  orientation="left"
                  stroke="#666"
                  width="60"
                  x="5"
                  x1="59"
                  x2="65"
                  y="5"
                  y1="185"
                  y2="185"
                />
                <text
                  class="recharts-text recharts-cartesian-axis-tick-value"
                  fill="#666"
                  height="360"
                  orientation="left"
                  stroke="none"
                  text-anchor="end"
                  width="60"
                  x="57"
                  y="185"
                >
                  <tspan
                    dy="0.355em"
                    x="57"
                  >
                    0.5
                  </tspan>
                </text>
              </g>
              <g
                class="recharts-layer recharts-cartesian-axis-tick"
              >
                <line
                  class="recharts-cartesian-axis-tick-line"
                  fill="none"
                  height="360"
                  orientation="left"
                  stroke="#666"
                  width="60"
                  x="5"
                  x1="59"
                  x2="65"
                  y="5"
                  y1="95"
                  y2="95"
                />
                <text
                  class="recharts-text recharts-cartesian-axis-tick-value"
                  fill="#666"
                  height="360"
                  orientation="left"
                  stroke="none"
                  text-anchor="end"
                  width="60"
                  x="57"
                  y="95"
                >
                  <tspan
                    dy="0.355em"
                    x="57"
                  >
                    0.75
                  </tspan>
                </text>
              </g>
              <g
                class="recharts-layer recharts-cartesian-axis-tick"
              >
                <line
                  class="recharts-cartesian-axis-tick-line"
                  fill="none"
                  height="360"
                  orientation="left"
                  stroke="#666"
                  width="60"
                  x="5"
                  x1="59"
                  x2="65"
                  y="5"
                  y1="5"
                  y2="5"
                />
                <text
                  class="recharts-text recharts-cartesian-axis-tick-value"
                  fill="#666"
                  height="360"
                  orientation="left"
                  stroke="none"
                  text-anchor="end"
                  width="60"
                  x="57"
                  y="5"
                >
                  <tspan
                    dy="0.355em"
                    x="57"
                  >
                    1
                  </tspan>
                </text>
              </g>
            </g>
          </g>
          <g
            class="recharts-cartesian-grid"
          >
            <g
              class="recharts-cartesian-grid-horizontal"
            >
              <line
                fill="none"
                height="360"
                stroke="#ccc"
                stroke-opacity="0.9"
                width="730"
                x="65"
                x1="65"
                x2="795"
                y="5"
                y1="365"
                y2="365"
              />
              <line
                fill="none"
                height="360"
                stroke="#ccc"
                stroke-opacity="0.9"
                width="730"
                x="65"
                x1="65"
                x2="795"
                y="5"
                y1="275"
                y2="275"
              />
              <line
                fill="none"
                height="360"
                stroke="#ccc"
                stroke-opacity="0.9"
                width="730"
                x="65"
                x1="65"
                x2="795"
                y="5"
                y1="185"
                y2="185"
              />
              <line
                fill="none"
                height="360"
                stroke="#ccc"
                stroke-opacity="0.9"
                width="730"
                x="65"
                x1="65"
                x2="795"
                y="5"
                y1="95"
                y2="95"
              />
              <line
                fill="none"
                height="360"
                stroke="#ccc"
                stroke-opacity="0.9"
                width="730"
                x="65"
                x1="65"
                x2="795"
                y="5"
                y1="5"
                y2="5"
              />
            </g>
            <g
              class="recharts-cartesian-grid-vertical"
            >
              <line
                fill="none"
                height="360"
                stroke="#ccc"
                stroke-opacity="0.9"
                width="730"
                x="65"
                x1="430"
                x2="430"
                y="5"
                y1="5"
                y2="365"
              />
              <line
                fill="none"
                height="360"
                stroke="#ccc"
                stroke-opacity="0.9"
                width="730"
                x="65"
                x1="65"
                x2="65"
                y="5"
                y1="5"
                y2="365"
              />
              <line
                fill="none"
                height="360"
                stroke="#ccc"
                stroke-opacity="0.9"
                width="730"
                x="65"
                x1="795"
                x2="795"
                y="5"
                y1="5"
                y2="365"
              />
            </g>
          </g>
          <g
            class="recharts-layer recharts-line"
          >
            <g
              class="recharts-layer"
            />
            <g
              class="recharts-layer recharts-line-dots"
            >
              <circle
                class="recharts-dot recharts-line-dot"
                cx="430"
                cy="5"
                fill="#fff"
                height="360"
                r="3"
                stroke="#4696e5"
                stroke-width="3"
                width="730"
              />
            </g>
          </g>
          <g
            class="recharts-layer recharts-line"
          >
            <g
              class="recharts-layer"
            />
            <g
              class="recharts-layer recharts-line-dots"
            >
              <circle
                class="recharts-dot recharts-line-dot"
                cx="430"
                cy="5"
                fill="#fff"
                height="360"
                r="3"
                stroke="#f77f28"
                stroke-width="3"
                width="730"
              />
            </g>
          </g>
        </svg>
        <div
          class="recharts-tooltip-wrapper"
          role="dialog"
          style="visibility: hidden; pointer-events: none; position: absolute; top: 0px; left: 0px;"
          tabindex="-1"
        >
          <div
            class="recharts-default-tooltip"
            style="margin: 0px; padding: 10px; background-color: rgb(255, 255, 255); white-space: nowrap; color: white; border-radius: 5px;"
          >
            <p
              class="recharts-tooltip-label"
              style="margin: 0px;"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
